# Impact-Studies

./: AnalysisGeneral.cpp  AnalysisGeneral.h  CMakeLists.txt  DVCSEvent.cpp.RC  DVCSEvent.cpp.noRC  DVCSEvent.h  EventDistribution.h  README.txt  main.cpp  reader.cpp  reader_new.cpp
include/analysis/: Analysis.h  AnalysisALU.h  AnalysisGeneral.h  AnalysisGeneralRC.h  AnalysisTSlope.h
include/event/: DVCSEvent.h
include/kinematic_cuts/: KinematicCuts.h
include/other/: BaseObject.h  DVCSKinematicFraction.h  FitResult.h  HashManager.h  KinematicsType.h  MeanSigmaAnalyser.h  RCType.h  SubProcessType.h
scripts/: getALUData
src/: main.cpp
src/analysis/: AnalysisALU.cpp  AnalysisGeneral.cpp  AnalysisGeneralRC.cpp  AnalysisTSlope.cpp
src/event/: DVCSEvent.cpp
src/kinematic_cuts/: KinematicCuts.cpp
src/other/: BaseObject.cpp  DVCSKinematicFraction.cpp  FitResult.cpp  KinematicsType.cpp  MeanSigmaAnalyser.cpp  RCType.cpp  SubProcessType.cpp
